Unit Testing updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.data.mongodb.database=smadb
 #spring.data.mongodb.dbpath=D:\MongoDbData\data\
 
 server.port = 8443
+
+
+#this line shows the sql statement in the logs
+logging.level.org.hibernate.SQL=debug
+ 
+#this line shows sql values in the logs
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+#////
+spring.main.banner-mode=off
